--- a/mystyles.css
+++ b/mystyles.css
@@ -114,7 +114,7 @@ img {
 }
 
 .container-nav {
-    background-image: linear-gradient(-90deg, #D38312, #A83279);
+    background-image: grey;
     width: 100%;
     max-width: 2500px;
     text-align: center;
@@ -131,7 +131,7 @@ img {
    
 
 .box {
-    background-image: url(./img/Animation.jpg);
+    background-image: url(./img/Profile.jpg);
     background-size: cover;
     height: 200px;
     width: 200px;
